[tool.poetry]
name = "csa-lab3"
version = "0.1.0"
description = "csa-lab3"
authors = ["Roman Krohin"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.12"

[tool.isort]
profile = "black"

[tool.poetry.dev-dependencies]
coverage = "^7.5.0"
mypy = "^1.10.0"
pytest = "^8.1.2"
pytest-golden = "^0.2.2"
ruff = "^0.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
enable_assertion_pass_hook = true
addopts = "--doctest-modules"
log_format = "%(name)s - %(levelname)s - %(location)s - %(message)s"

[tool.ruff]
line-length = 120
lint.select = [
    # A set of chosen linter rules is specified here.
    # See https://beta.ruff.rs/docs/rules/ for more info.
    # pyflakes (simple obvious errors)
    "F",
    # pycodestyle (style linter, pep8, black-compatible)
    "E",
    "W",
    # pep8-naming (style linter, pep8 naming conventions)
    "N",
    # isort (imports sorting)
    "I",
    # mccabe (cyclomatic complexity analyzer to prevent overcomplicated functions)
    "C90",
    # pyupgrade (possible syntax upgrades checker)
    "UP",
    # eradicate (commented-out code finder for it to be removed)
    "ERA",
    # flake8-2020 (errors related to sys.version or sys.version_info, just in case)
    "YTT",
    # flake8-annotations (enforces presense of type hints so the codebase is fully typed)
    # "ANN",  # too burdensome
    # flake8-async (async-related mistakes/errors)
    "ASYNC",
    # flake8-builtins (checks builtin names shadowing, it's better not to)
    "A",
    # flake8-commas (to enforce trailing commas)
    "COM",
    # flake8-future-annotations (to ensure enabling modern (3.7+) postponed evaluation of type hints)
    "FA",
    # flake8-import-conventions (to enforce standartized import aliases like "import pandas as pd")
    "ICN",
    # flake8-no-pep420 (to enforce presence of __init__.py in packages)
    "INP",
    # flake8-print (to disallow print statements)
    "T20",
    # flake8-pytest-style (to improve pytest-related style consistency)
    "PT",
    # flake8-quotes (to enforce quotes style)
    "Q",
    # flake8-return (checks mistakes related to return values)
    "RET",
    # flake8-use-pathlib (to enforce pathlib usage instead of os.path)
    "PTH",
    # pandas-vet (pandas-related advices)
    "PD",
    # tryceratops (try/except-related advices)
    "TRY",
    # ruff-specific advices
    "RUF",
]
lint.ignore = [
    "COM812", # The following rules may cause conflicts when used with the formatter: `COM812`.
    "E501",   # allow lines longer than 80 symbols (up to 120)
    "T201",   # `print` found
    "PTH123", # `open()` should be replaced by `Path.open()`
    # to simplify code for non-Python programmers
    "PTH118", # `os.path.join()` should be replaced by `Path` with `/` operator
    "UP032",  # [*] Use f-string instead of `format` call
    "N803", # Argument name `Alu` should be lowercase
    "C901", # `run` is too complex (8 > 7)
    "PT018" # Assertion should be broken down into multiple parts


]
lint.unfixable = [
    "ERA001", # prohibit to "auto-fix" (=remove) commented-out code
]
src = ["src"]

[tool.ruff.lint.mccabe]
max-complexity = 7